Got wave moving, fixed gulp issues

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -131,184 +131,184 @@ html, body, .vsc-initialized {
 
 .houses-container > img:nth-child(1) {
   display: inline;
-  height: 44%;
+  height: 45%;
   transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(2) {
   display: inline;
-  height: 35%;
+  height: 39%;
 }
 
 .houses-container > img:nth-child(3) {
   display: inline;
-  height: 38%;
+  height: 34%;
 }
 
 .houses-container > img:nth-child(4) {
   display: inline;
-  height: 48%;
+  height: 39%;
 }
 
 .houses-container > img:nth-child(5) {
   display: inline;
-  height: 40%;
+  height: 37%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(6) {
   display: inline;
-  height: 44%;
+  height: 39%;
   transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(7) {
   display: inline;
-  height: 39%;
+  height: 40%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(8) {
   display: inline;
-  height: 38%;
+  height: 34%;
 }
 
 .houses-container > img:nth-child(9) {
   display: inline;
-  height: 47%;
-  transform: scaleX(-1);
+  height: 44%;
 }
 
 .houses-container > img:nth-child(10) {
   display: inline;
-  height: 41%;
-  transform: scaleX(-1);
+  height: 48%;
 }
 
 .houses-container > img:nth-child(11) {
   display: inline;
-  height: 34%;
+  height: 37%;
   transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(12) {
   display: inline;
-  height: 41%;
+  height: 34%;
 }
 
 .houses-container > img:nth-child(13) {
   display: inline;
-  height: 37%;
-  transform: scaleX(-1);
+  height: 40%;
 }
 
 .houses-container > img:nth-child(14) {
   display: inline;
-  height: 39%;
+  height: 40%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(15) {
   display: inline;
-  height: 37%;
+  height: 47%;
 }
 
 .houses-container > img:nth-child(16) {
   display: inline;
-  height: 34%;
+  height: 41%;
 }
 
 .houses-container > img:nth-child(17) {
   display: inline;
-  height: 38%;
+  height: 41%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(18) {
   display: inline;
-  height: 38%;
-  transform: scaleX(-1);
+  height: 48%;
 }
 
 .houses-container > img:nth-child(19) {
   display: inline;
-  height: 34%;
+  height: 45%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(20) {
   display: inline;
-  height: 34%;
-  transform: scaleX(-1);
+  height: 47%;
 }
 
 .houses-container > img:nth-child(21) {
   display: inline;
-  height: 35%;
+  height: 48%;
 }
 
 .houses-container > img:nth-child(22) {
   display: inline;
-  height: 46%;
+  height: 38%;
 }
 
 .houses-container > img:nth-child(23) {
   display: inline;
-  height: 43%;
-  transform: scaleX(-1);
+  height: 35%;
 }
 
 .houses-container > img:nth-child(24) {
   display: inline;
-  height: 46%;
-  transform: scaleX(-1);
+  height: 34%;
 }
 
 .houses-container > img:nth-child(25) {
   display: inline;
   height: 36%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(26) {
   display: inline;
-  height: 48%;
+  height: 44%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(27) {
   display: inline;
-  height: 43%;
+  height: 42%;
 }
 
 .houses-container > img:nth-child(28) {
   display: inline;
-  height: 47%;
+  height: 46%;
 }
 
 .houses-container > img:nth-child(29) {
   display: inline;
-  height: 34%;
-  transform: scaleX(-1);
+  height: 48%;
 }
 
 .houses-container > img:nth-child(30) {
   display: inline;
-  height: 34%;
+  height: 47%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(31) {
   display: inline;
-  height: 41%;
+  height: 35%;
 }
 
 .houses-container > img:nth-child(32) {
   display: inline;
-  height: 43%;
+  height: 42%;
+  transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(33) {
   display: inline;
-  height: 44%;
-  transform: scaleX(-1);
+  height: 40%;
 }
 
 .houses-container > img:nth-child(34) {
   display: inline;
-  height: 44%;
+  height: 39%;
 }
 
 .houses-container > img:nth-child(35) {
@@ -318,7 +318,7 @@ html, body, .vsc-initialized {
 
 .houses-container > img:nth-child(36) {
   display: inline;
-  height: 42%;
+  height: 43%;
 }
 
 .houses-container > img:nth-child(1) {
@@ -359,6 +359,7 @@ html, body, .vsc-initialized {
 .wave-container {
   position: absolute;
   width: 100%;
+  min-width: 300px;
   height: 30%;
   bottom: 0px;
   background: #d4d4d4;
@@ -367,18 +368,18 @@ html, body, .vsc-initialized {
 
 @-webkit-keyframes move-wave {
   0% {
-    transform: scaleX(1) translateY(0%);
+    background-position: 0px 0px;
   }
   100% {
-    transform: scaleX(1.05) translateY(9%);
+    background-position: 30rem 0px;
   }
 }
 @keyframes move-wave {
   0% {
-    transform: scaleX(1) translateY(0%);
+    background-position: 0px 0px;
   }
   100% {
-    transform: scaleX(1.05) translateY(9%);
+    background-position: 30rem 0px;
   }
 }
 @-webkit-keyframes move-boat {
@@ -435,6 +436,8 @@ html, body, .vsc-initialized {
   content: "";
   position: absolute;
   width: 100%;
+  border: 1px solid red;
+  min-height: 2rem;
   height: 83%;
   bottom: 0;
   left: 0;
@@ -442,10 +445,10 @@ html, body, .vsc-initialized {
   background: black;
   background-image: url("../images/wave.svg");
   background-position: top;
-  background-size: 120% 100%;
+  background-size: 30rem 5rem;
   background-repeat: repeat-x;
-  -webkit-animation: move-wave 5s alternate cubic-bezier(0.25, 0.56, 0.73, 0.41) infinite;
-  animation: move-wave 5s alternate cubic-bezier(0.25, 0.56, 0.73, 0.41) infinite;
+  -webkit-animation: move-wave 18.3s reverse linear infinite;
+  animation: move-wave 18.3s reverse linear infinite;
 }
 
 .wave-container .boat {
@@ -453,8 +456,8 @@ html, body, .vsc-initialized {
   height: 82%;
   width: 100%;
   z-index: 1;
-  -webkit-animation: move-boat-vertically 20s cubic-bezier(0.29, 0.06, 0.7, 0.93) infinite;
-  animation: move-boat-vertically 20s cubic-bezier(0.29, 0.06, 0.7, 0.93) infinite;
+  -webkit-animation: move-boat-vertically 73.2s cubic-bezier(0.29, 0.06, 0.7, 0.93) infinite;
+  animation: move-boat-vertically 73.2s cubic-bezier(0.29, 0.06, 0.7, 0.93) infinite;
 }
 
 .wave-container .boat::after {
@@ -468,8 +471,8 @@ html, body, .vsc-initialized {
   background-image: url("../images/boat.svg");
   background-position: top;
   background-size: 100% 100%;
-  -webkit-animation: move-boat 15s linear infinite;
-  animation: move-boat 15s linear infinite;
+  -webkit-animation: move-boat 15s ease-in-out infinite;
+  animation: move-boat 15s ease-in-out infinite;
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
@@ -523,10 +526,6 @@ html, body, .vsc-initialized {
 
   .sky-container .main-content .text-container .link-container span .link-sep-non-mobile {
     display: inline;
-  }
-
-  .wave-container::after {
-    background-size: 100% 100%;
   }
 
   @-webkit-keyframes move-boat {
